--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 matrix:
   include:
     - language: python
+      dist: xenial
       python: 3.7
       before_script:
         - pip install -r requirements/ci.txt
