--- a/ui/package.json
+++ b/ui/package.json
@@ -13,12 +13,16 @@
     "@babel/core": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
     "autoprefixer": "^9.5.1",
+    "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.5",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "css-loader": "^2.1.1",
     "file-loader": "^3.0.1",
     "postcss-loader": "^3.0.0",
     "precss": "^4.0.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "source-map-loader": "^0.2.4",
     "style-loader": "^0.23.1",
     "ts-loader": "^6.0.0",
     "typescript": "^3.4.5",
@@ -28,7 +32,7 @@
     "webpack-dev-server": "^3.3.1"
   },
   "dependencies": {
-    "@types/react": "^16.8.17",
-    "react": "^16.8.6"
+    "@types/react": "^16.8.19",
+    "@types/react-dom": "^16.8.4"
   }
 }
